few changes to structure for modals and other sections

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <!-- Home section -->
         <section class="">
             <div class=" timer-div pt-5 text-start">
-                <h2 class="ms-5 mt-5">Quiz starts in:</h2>
+                <h2 class="ms-5 mt-5">Quiz ends in:</h2>
 
                 <div class="w-50 d-flex gap-3 text-center pt-5 fs-1 mb-5 ms-5">
                     <div>
