added home page structure with navigation,  timer, and footer

--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
             <div>
                 <a class="btn btn-warning" href="./index.html" id="reg_school_btn">Register School</a>
                 <a class="btn btn-warning" href="./index.html" id="reg_student_btn">Register Student</a>
-                <!-- <a class="btn btn-warning " href="./index.html" id="login_student_btn">Login</a> -->
+                <a class="btn btn-warning " href="./index.html" id="login_student_btn">Login</a>
             </div>
         </nav>
     </header>
