--- a/quiz.html
+++ b/quiz.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./CSS/bootstrap.min.css">
     <link rel="stylesheet" href="./CSS/bootstrap.min.css.map">
     <link rel="stylesheet" href="./CSS/footer.css">
+    <link rel="stylesheet" href="./CSS/index.css">
     <script src="./JS/bootstrap.bundle.min.js" defer></script>
     <script src="./JS/quiz.js" defer></script>
     <title>Quiz</title>
@@ -28,18 +29,40 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main class="mb-4">
 
-        <div class="container  align-items-center h-100 rounded border border-2 border-warning">
-            <div class="d-flex justify-content-between">
-                <p>Student Name: <span id="logged_name"></span></p>
-                <p>School: <span id="logged_school"></span></p>
+        <div class="container  align-items-center h-100 rounded border border-2 border-warning my-5 py-4 px-4 quiz_div">
+            <div class=" d-flex justify-content-around">
+                <p class="fw-semibold">Student Name: <span id="logged_name" class="fw-bold"></span></p>
+                <p class="fw-semibold">School: <span id="logged_school" class="fw-bold"></span></p>
             </div>
-            <h3>What year was Nigeria's independence?</h3>
-            <button class="">1960</button>
-            <button>1850</button>
-            <button>2010</button>
-            <button>2023</button>
+            <div id="questions_div">
+                 <h3 id="question" class="mb-4"></h3>
+               <div class=" gap-2" id="options">
+                    <!-- <a
+                        class="w-100 d-block border border-1 border-warning rounded px-2 py-2 text-warning text-decoration-none fs-5 mb-3">1960</a>
+                    <a
+                        class="w-100 d-block border border-1 border-warning rounded px-2 py-2 text-warning text-decoration-none fs-5 mb-3">1850</a>
+                    <a
+                        class="w-100 d-block border border-1 border-warning rounded px-2 py-2 text-warning text-decoration-none fs-5 mb-3">2010</a>
+                    <a
+                        class="w-100 d-block border border-1 border-warning rounded px-2 py-2 text-warning text-decoration-none fs-5">2023</a> -->
+                </div> 
+            </div>
+
+            <div class="w-100 mt-3 d-flex justify-content-between">
+                <button class="text-black btn btn-warning" id="prev">Prev</button>
+                <button class="text-black btn btn-warning d-none" id="submit_quiz">Submit</button>
+                <button class="text-black btn btn-warning" id="next" >Next</button>
+            </div>
+        </div>
+
+        <div class="result_div d-none">
+            <div class="container text-center align-items-center h-100 rounded border border-2 border-warning my-5 py-4 px-4 ">
+                <h2>Congratulations! submitted successfully.</h2>
+                <p>You can check Leaderboard for your rank!</p>
+                <a href="./leadboard.html" class="text-black btn btn-warning">Leaderboard</a>
+            </div>
         </div>
 
     </main>
@@ -75,7 +98,7 @@
                         <div class="d-flex w-100 gap-2">
                             <label for="newsletter1" class="visually-hidden">Email address</label>
                             <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
-                            <button class="btn btn-warning" type="button">Subscribe</button>
+                            <a class="btn btn-warning" type="a">Subscribe</a>
                         </div>
                     </form>
                 </div>
