added the quiz page where logged in students can write the quiz

--- a/quiz.html
+++ b/quiz.html
@@ -25,6 +25,7 @@
             <div>
                 <a class="btn btn-warning" href="./index.html" id="reg_school_btn">Register School</a>
                 <a class="btn btn-warning" href="./index.html" id="reg_student_btn">Register Student</a>
+                <a class="btn btn-warning" href="./leadboard.html" id="reg_student_btn">Winners</a>
                 <!-- <a class="btn btn-warning " href="./index.html" id="login_student_btn">Login</a> -->
             </div>
         </nav>
@@ -60,6 +61,7 @@
         <div class="result_div d-none">
             <div class="container text-center align-items-center h-100 rounded border border-2 border-warning my-5 py-4 px-4 ">
                 <h2>Congratulations! submitted successfully.</h2>
+                <p>You Scored: <span id="percent"></span></p>
                 <p>You can check Leaderboard for your rank!</p>
                 <a href="./leadboard.html" class="text-black btn btn-warning">Leaderboard</a>
             </div>
