added a message to show up when leaderboard is empty

--- a/leadboard.html
+++ b/leadboard.html
@@ -47,6 +47,12 @@
                             </tr>
                         </thead>
                         <tbody class="table-warning " id="tbody">
+                            <tr>
+                                <th>Be the</th>
+                                <th>First to</th>
+                                <th>Finnish</th>
+                                <th>The quiz</th>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
