added a timer to the quiz to improve accountability

--- a/quiz.html
+++ b/quiz.html
@@ -36,6 +36,7 @@
             <div class=" d-flex justify-content-around">
                 <p class="fw-semibold">Student Name: <span id="logged_name" class="fw-bold"></span></p>
                 <p class="fw-semibold">School: <span id="logged_school" class="fw-bold"></span></p>
+                <p class="fw-semibold">Time: <span id="quiz_time" class="fw-bold"></span></p>
             </div>
             <div id="questions_div">
                  <h3 id="question" class="mb-4"></h3>
