working pudated version of webapp. (last commit was inside JS folder dir)

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
 <body class="bg-light ">
     <header class="border border-bottom position-sticky bg-white">
-        <nav class="nav navbar d-flex justify-content-between mx-5">
-            <div class="d-flex">
+        <nav class=" nav navbar d-flex justify-content-between mx-5">
+            <div class="d-flex mb-2">
                 <a href="./index.html"><img src="./images/oil_lamp_yellow.png" alt="logo" class="img-fluid"
                         style="height:50px"></a>
                 <span class="text-warning fs-5 align-self-end ">Lantern Schools</span>
@@ -32,11 +32,9 @@
         </nav>
     </header>
 
-
-
     <main class="">
         <!-- Spinner -->
-        <div class="w-100 d-flex justify-content-center mt-5 spinner d-none">
+        <div class="w-100 d-flex justify-content-center mt-5 mb-5 spinner d-none">
             <div class="spinner-border text-warning mx-auto" role="status">
                 <span class="visually-hidden">Loading...</span>
             </div>
@@ -105,11 +103,11 @@
                         aria-describedby="emailHelp">
                     <span id="EmailErr"></span>
                 </div>
-                <div class='mb1 mt-2'>
-                    <label for="school_options" class="form-label">Pick School</label>
+                <div class='mb1 mt-3'>
+                    <!-- <label for="school_options" class="form-label">Pick School</label> -->
                     <select name="" id="school_options" class="form-select inputErr">
-                        <option value="">School</option>
-                        <option value="rework academy">Rework Academy.</option>
+                        <option value="">Pick School</option>
+                        <!-- <option value="rework academy">Rework Academy.</option> -->
                     </select>
                     <span id="SchoolErr"></span>
                 </div>
