--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
             <div>
                 <a class="btn btn-warning" href="./index.html" id="reg_school_btn">Register School</a>
                 <a class="btn btn-warning" href="./index.html" id="reg_student_btn">Register Student</a>
-                <a class="btn btn-warning " href="./index.html" id="login_student_btn">Login</a>
+                <a class="btn btn-warning " href="./index.html" id="logout_student_btn">Logout</a>
             </div>
         </nav>
     </header>
@@ -77,7 +77,7 @@
             <div class="col-2">
               <h5>Socials</h5>
               <ul class="nav flex-column">
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Twitter</a></li>
+                <li class="nav-item mb-2"><a href="www.twitter.com/KingsleyOwolab1" class="nav-link p-0 text-muted">Twitter</a></li>
                 <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">LinkedIn</a></li>
                 <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Instagram</a></li>
                 <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Whatsapp</a></li>
